// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account services case: 1`] = `
Object {
  "data": Object {
    "resendVerifySignup": true,
  },
}
`;

exports[`account services case: 2`] = `
Object {
  "data": Object {
    "resendVerifySignup": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`account services case: 3`] = `
Object {
  "data": Object {
    "sendResetPassword": null,
  },
  "errors": Array [
    [GraphQLError: User not found],
  ],
}
`;

exports[`account services case: 4`] = `
Object {
  "data": Object {
    "sendResetPassword": true,
  },
}
`;

exports[`account services case: 5`] = `
Object {
  "data": Object {
    "changePassword": null,
  },
  "errors": Array [
    [GraphQLError: Invalid old password],
  ],
}
`;

exports[`account services case: 6`] = `
Object {
  "data": Object {
    "changePassword": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`account services case: 7`] = `
Object {
  "data": Object {
    "changePassword": null,
  },
  "errors": Array [
    [GraphQLError: User not found],
  ],
}
`;

exports[`account services case: 8`] = `
Object {
  "data": Object {
    "changeEmail": Object {
      "email": "new@email.com",
    },
  },
}
`;

exports[`account services case: 9`] = `
Object {
  "data": Object {
    "changeEmail": null,
  },
  "errors": Array [
    [GraphQLError: New email is same as old one],
  ],
}
`;

exports[`account services case: 10`] = `
Object {
  "data": Object {
    "changeEmail": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`account services case: 11`] = `
Object {
  "data": Object {
    "changeEmail": null,
  },
  "errors": Array [
    [GraphQLError: User not found],
  ],
}
`;

exports[`account services case: 12`] = `
Object {
  "data": Object {
    "verifyResetPassword": null,
  },
  "errors": Array [
    [GraphQLError: Passwords do not match],
  ],
}
`;
